--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>AngularSemantic</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>AngularSemantic</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css" />
+
 </head>
+
 <body>
-  <semui-root>Loading...</semui-root>
+    <semui-root>Loading...</semui-root>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
+
 </html>
